--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,13 @@
 			<version>6.10</version>
 			<scope>test</scope>
 		</dependency>
+		
+            <dependency>
+                <groupId>com.sun.mail</groupId>
+                <artifactId>javax.mail</artifactId>
+                <version>1.6.2</version>
+            </dependency>
+        
 
 
 	</dependencies>
